# enem

./: .gitignore  Makefile  README.md  cookiecutter.yaml  pyproject.toml  requirements-prod.txt
.devcontainer/: devcontainer.dockerfile  devcontainer.json  devcontainer.sh
.github/workflows/: makefile.yml  python-publish.yml
enem/: __main__.py
tests/: test_main.py
